feat(blockentity): 优化流体容器块实体功能并添加屏幕渲染
- 移除 ServerPlayer 导入和相关网络同步代码
- 简化 canInternalInputMerge 方法中的注释和逻辑
- 添加对蜂蜜瓶的支持，包括动态查找蜂蜜流体
- 重构输入处理逻辑，将蜂蜜瓶处理提前
- 移除不必要的 onContentsChanged 调用
- 优化流体渲染相关方法调用
- 添加 TieredFluidTank 的 forceMix 参数支持
- 新增 fireOnChanged 公共方法用于外部触发内容变更
- 修复资源包路径相关问题
- 优化客户端数据包处理逻辑
- 移除多余的安全检查和调试代码
- 添加 TieredContainerScreen 类实现流体容器界面渲染
- 实现流体条、滚动条和槽位位置动态调整功能
- 添加流体悬停提示和效果显示功能
- **部分修复**